@@ -1,4 +1,5 @@
 version 0.0.7 - currently working on
+- Enhanced the indexing: The indexed page title in detail view is now the name of the person (#83)
 - Added note on spam protection to the manual (#48)
 - Hide empty fields in detailed view. Reworked the the whole templating engine. (#39)
 - Fixed indexing of the output (#41)
